# trajopt-playground

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
config/robots/fanuc_m710/: contact_manager_config.yaml  kinematics_plugin_config.yaml  robot_actual_roe.srdf  robot_actual_roe.urdf
config/robots/fanuc_m710/meshes/collision/: L1.STL  L2.STL  L3.STL  L4.STL  L5.STL  L6.STL  base_link.STL
config/robots/fanuc_m710/meshes/visual/: L1.dae  L1.mtl  L2.dae  L2.mtl  L3.dae  L3.mtl  L4.dae  L5.dae  L5.mtl  L6.dae  L6.mtl  base_link.dae  base_link.mtl
data/: descartes_solution.json  input.csv
include/: utils.hpp
src/: main.cpp
